# Coding

Haskell/: .gitignore
Haskell/home-inventory-management/: home-inventory-management.cabal  home-inventory.txt
Haskell/home-inventory-management/src/: Main.hs
Haskell/popcorn/: client_session_key.aes  example.cabal  popcorn.cabal
Haskell/popcorn/frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo
Haskell/popcorn/frontend/src/: Main.elm
Haskell/popcorn/lib/: Types.hs
Haskell/popcorn/src/: Main.hs
Haskell/snake/: snake.cabal
Haskell/snake/app/: Main.hs
Haskell/snake/lib/: Types.hs
