cabal-version:      3.0
name:               snake
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             alec
maintainer:         alecrodriguez1247@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable snake
    import:           warnings
    main-is:          Main.hs
    other-modules: Types
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app, lib
    default-language: Haskell2010
